# CollatzLab

./: .env.example  .gitignore  LICENSE  PLAN.md  README.md  bootstrap-macos.sh  package.json  vercel.json
backend/: README.md  pyproject.toml
backend/src/collatz_lab/: __init__.py  _profile_helpers.py  api.py  autopilot.py  bench_metal_chunk.py  bench_metal_presets.py  cli.py  config.py  cpu_sieve_native_runtime.py  database.py  gpu_sieve_metal.py  gpu_sieve_metal_runtime.py  hardware.py  hypothesis.py  llm.py  logutil.py  main.py  metal_chunk_calibration.py  metrics_sot.py  mps_collatz.py  orchestration.py  reddit_feed.py  repository.py  runtime_bootstrap.py  scheduling.py  schemas.py  services.py  sieve_reference.py  task_execution.py  validation.py  validation_source.py  worker.py
backend/src/collatz_lab/hardware/: __init__.py  constants.py  cpu_label.py  discovery.py  gpu.py  gpu_inventory.py  (+8 more)
backend/tests/: conftest.py  test_api.py  test_bench_metal.py  test_collatz_math.py  test_compute_profile_seed.py  test_config_env.py  test_cpu_sieve_native_parity.py  test_differential_cross_backend.py  test_gpu_sieve_metal_runtime.py  test_hardware_portability.py  test_hypothesis_probes.py  test_kernel_correctness.py  test_logutil.py  test_metal_chunk_calibration.py  test_metal_gpu_sieve_integration.py  test_metal_lab_sieve_parity.py  test_mps_metal_kernels.py  test_native_sieve_c_aggregate.py  test_new_features.py  test_repository_workflow.py  test_run_recovery.py  test_sieve_reference_vs_numba.py  test_task_execution.py  test_validation_source.py  test_worker_flow.py
(+386 files in other folders)
